# OCT-Marker

./: CMakeLists.txt
src/: doxygen.h  globaldefinitions.h  main.cpp  prepareprogrammoptions.h
src/algos/: douglaspeuckeralgorithm.h  orderdcontures2d.h
src/data_structure/: conture2d.h  extraseriesdata.h  matrx.h  point2d.h  programoptions.h  rect2d.h  scalefactor.h  simplecvmatcompress.cpp  simplecvmatcompress.h  simplematcompress.h  slobscandistancemap.cpp  slobscandistancemap.h
src/helper/: actionclasses.h  convertcolorspace.h  programoptionstype.h  ptreehelper.h  qdebugstream.h  signalblocker.h  slocoordtranslator.h
src/imagefilter/: filtergammacontrastbrightness.cpp  filtergammacontrastbrightness.h  filterimage.h
src/manager/: octdatamanager.cpp  octdatamanager.h  octmarkerio.cpp  octmarkerio.h  octmarkermanager.cpp  octmarkermanager.h  paintmarker.cpp  paintmarker.h
src/markermodules/: bscanmarkerbase.cpp  bscanmarkerbase.h  markercommand.h  slomarkerbase.h  widgetoverlaylegend.h
src/markermodules/bscanintervalmarker/: bscanintervalmarker.cpp  bscanintervalmarker.h  bscanintervalptree.h  definedintervalmarker.h  importintervalmarker.cpp  importintervalmarker.h  intervalllegend.h  intervalmarker.h  slointervallmap.cpp  slointervallmap.h  wgintervalmarker.h
src/markermodules/bscanlayersegmentation/: bscanlayersegmentation.cpp  bscanlayersegmentation.h  bscanlayersegptree.h  colormaphsv.h  editbase.h  editpen.cpp  editpen.h  editspline.cpp  editspline.h  findsupportingpoints.h  layersegcommand.cpp  layersegcommand.h  layersegmentationio.cpp  layersegmentationio.h  pchip.cpp  pchip.h  seglinebutton.h  thicknessmap.cpp  thicknessmap.h  thicknessmaplegend.h  thicknessmaptemplates.h  wglayerseg.cpp  wglayerseg.h
src/markermodules/bscansegmentation/: bscansegalgorithm.cpp  bscansegalgorithm.h  bscanseglocalop.cpp  bscanseglocalop.h  bscanseglocalopnn.cpp  bscanseglocalopnn.h  bscansegmentation.cpp  bscansegmentation.h  bscansegmentationptree.cpp  bscansegmentationptree.h  bscansegtoolbar.h  configdata.h  freeformsegcommand.h  paintsegline.h  paintsegmentationtotikz.h  simplemarchingsquare.h  wgsegmentation.cpp  wgsegmentation.h  wgsegnn.cpp  wgsegnn.h  windownninout.cpp  windownninout.h
src/markermodules/distancemeter/: distancemeter.cpp  distancemeter.h  wgdistancemeter.h
src/markermodules/objectsmarker/: objectsmarker.cpp  objectsmarker.h  objectsmarkerfactory.h  objectsmarkerptree.h  objectsmarkerscene.h  widgetobjectmarker.h
src/markermodules/scanclassifier/: classifiermarker.h  classifiermarkerproxy.h  classifiermarkerstate.h  definedclassifiermarker.h  scanclassifier.cpp  scanclassifier.h  wgscanclassifier.h
src/markermodules/sloobjects/: sloobjectmarker.h  sloobjectsptree.h
src/markerobjects/: rectitem.h
src/model/: octdatamodel.cpp  octdatamodel.h  octfilesmodel.cpp  octfilesmodel.h  paintmarkermodel.cpp  paintmarkermodel.h
src/qt/: flowlayout.cpp  flowlayout.h
src/widgets/: bscanchooserspinbox.cpp  bscanchooserspinbox.h  bscanmarkerwidget.cpp  bscanmarkerwidget.h  cvimagewidget.cpp  cvimagewidget.h  doubleslider.h  dwdebugoutput.h  dwimagecoloradjustments.h  dwmarkerwidgets.h  mousecoordstatus.cpp  mousecoordstatus.h  numberpushbutton.h  octinformationswidget.cpp  octinformationswidget.h  octinformationwidgetaction.h  scrollareapan.h  sloimagewidget.cpp  sloimagewidget.h  slowithlegendwidget.h  wgoctdatatree.h  wgoctmarkers.h  wgsloimage.cpp  wgsloimage.h
src/windows/: infodialogs.h  octmarkeractions.cpp  octmarkeractions.h  octmarkermainwindow.cpp  octmarkermainwindow.h  stupidsplinewindow.cpp  stupidsplinewindow.h
